creusot/tests/should_fail/prusti/match/homes.stderr
error[creusot]: X@{'x|'y} cannot be moved to 'x since it isn't copy
                required by return type
 --> homes.rs:6:5
  |
6 | /     match x {
7 | |         Some(x) => x,
8 | |         None => default
9 | |     }
  | |_____^

error: aborting due to previous error

